Added detection of changes, fixed incorrect positioning

--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -32,6 +32,5 @@
     <p class="review-title">Tytuł recenzji: {{review.title}}</p>
     <p class="review-excerpt">{{review.content}}</p>
   </div>
+  <app-comments currentUserId="1" class="comments-width"></app-comments>
 </div>
-
-<app-comments currentUserId="1"></app-comments>
