--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -12,6 +12,7 @@
       [currentUserId]="currentUserId!"
       [replies]="getReplies(comment.commentId!)"
       (setActiveComment)="setActiveComment($event)"
+      (addComment)="addComment($event)"
     >
     </app-comment>
   </div>
