--- a/src/app/components/user-panel-small/user-panel-small.component.css
+++ b/src/app/components/user-panel-small/user-panel-small.component.css
@@ -1,5 +1,5 @@
 .user-icon {
-  transform: scale(4); /* 4 times the original size */
+  transform: scale(4);
   margin-left: auto;
-  margin-right: 40px; /* adjust this value to move the icon away from the right side */
+  margin-right: 40px;
 }
